--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/vladimirFr89/react-learning#readme",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
     "webpack": "^4.7.0",
     "webpack-cli": "^2.1.3"
   }
