--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "style-loader": "^0.21.0",
     "webpack": "^4.7.0",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
